# pickleballtournamentsportal.com

./: Cargo.toml
docker/: Dockerfile  build  run
src/: client.rs  main.rs  tournaments.rs  util.rs
src/endpoints/: event.rs  mod.rs  tournament.rs  tournaments.rs
src/scrape/: event.rs  mod.rs  result.rs  tournament_event_group_list.rs  tournament_info.rs  tournament_list.rs  tournament_player_list.rs  tournament_schedule.rs
src/util/: cache.rs  guard_stack.rs  mod.rs  scrape_result.rs
static/scripts/: event.js  main.js  tournament.js  tournaments.js
static/styles/: main.css
templates/: 404.html.tera  base.html.tera  event.html.tera  index.html.tera  tournament.html.tera  tournaments.html.tera
