[package]
name = "pickleballtournamentsportal"
version = "0.1.0"
edition = "2018"

[dependencies]
chrono = "0.4"
once_cell = "1.8"
regex = "1.5"
reqwest = { version = "0.11", features = ["cookies"] }
rocket = { version = "0.5.0-rc.1", features = ["json"] }
rocket_dyn_templates = { version = "0.1.0-rc.1", features = ["tera"] }
scraper = "0.12"